@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2024 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,11 +20,14 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.time.Duration;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.json.JsonMapper;
 
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
+import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
@@ -33,22 +36,23 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Tests for {@link ServerResponse.SseBuilder}.
+ *
  * @author Arjen Poutsma
  * @author Sebastien Deleuze
  * @author Brian Clozel
  */
 class SseServerResponseTests {
 
-	private MockHttpServletRequest mockRequest;
+	private final MockHttpServletRequest mockRequest = new MockHttpServletRequest("GET", "https://example.com");
 
-	private MockHttpServletResponse mockResponse;
+	private final MockHttpServletResponse mockResponse = new MockHttpServletResponse();
+
 
 	@BeforeEach
 	void setUp() {
-		this.mockRequest = new MockHttpServletRequest("GET", "https://example.com");
 		this.mockRequest.setAsyncSupported(true);
-		this.mockResponse = new MockHttpServletResponse();
 	}
+
 
 	@Test
 	void sendString() throws Exception {
@@ -83,7 +87,7 @@ class SseServerResponseTests {
 			}
 		});
 
-		ServerResponse.Context context = () -> Collections.singletonList(new MappingJackson2HttpMessageConverter());
+		ServerResponse.Context context = () -> List.of(new JacksonJsonHttpMessageConverter());
 
 		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
 		assertThat(mav).isNull();
@@ -104,9 +108,9 @@ class SseServerResponseTests {
 			}
 		});
 
-		MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-		converter.setPrettyPrint(true);
-		ServerResponse.Context context = () -> Collections.singletonList(converter);
+		JsonMapper jsonMapper = JsonMapper.builder().enable(SerializationFeature.INDENT_OUTPUT).build();
+		JacksonJsonHttpMessageConverter converter = new JacksonJsonHttpMessageConverter(jsonMapper);
+		ServerResponse.Context context = () -> List.of(converter);
 
 		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
 		assertThat(mav).isNull();
@@ -170,6 +174,26 @@ class SseServerResponseTests {
 		assertThat(mav).isNull();
 
 		String expected = "event:custom\n\n";
+		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
+	}
+
+	@Test // gh-34608
+	void sendHeartbeat() throws Exception {
+		ServerResponse response = ServerResponse.sse(sse -> {
+			try {
+				sse.comment("").send();
+			}
+			catch (IOException ex) {
+				throw new UncheckedIOException(ex);
+			}
+		});
+
+		ServerResponse.Context context = Collections::emptyList;
+
+		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
+		assertThat(mav).isNull();
+
+		String expected = ":\n\n";
 		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
 	}
 
